# openrouter-rust

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES_0.1.0.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: coverage.md
docs/recipes/: key_management.md  multimodal.md  provider_routing.md  quickstart.md  streaming.md  structured_outputs.md  tools.md  zdr.md
examples/: build_client.rs  create_speech.rs  create_video.rs  e2e.rs  get_activity.rs  get_credits.rs  get_key.rs  guardrails.rs  key_management.rs  list_model_endpoints.rs  list_models.rs  list_organization_members.rs  list_providers.rs  mcp_tools.rs  multimodal.rs  oauth_pkce.rs  provider_routing.rs  reasoning.rs  rerank.rs  responses.rs  run_all.rs  streaming.rs  structured_output.rs  tool_calling.rs  transforms.rs  web_search.rs  workspaces.rs
src/: client.rs  error.rs  lib.rs  mcp.rs  oauth.rs  request.rs  responses.rs  retry.rs  stream.rs  timer.rs  tool_call_accumulator.rs  webhooks.rs
src/types/: account.rs  audio_speech.rs  common.rs  discovery.rs  guardrails.rs  message.rs  mod.rs  multimodal.rs  organization.rs  request.rs  rerank.rs  response.rs  video.rs  workspace.rs
tests/: chat_complete.rs  complete.rs  concurrency.rs  create_speech.rs  endpoint_errors.rs  error_mapping.rs  exchange_auth_code.rs  get_activity.rs  get_credits.rs  get_key.rs  guardrails.rs  key_crud.rs  list_model_endpoints.rs  list_models.rs  list_organization_members.rs  list_providers.rs  rerank.rs  responses.rs  streaming.rs  videos.rs  workspaces.rs
