[package]
name = "openrouter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Unlicense"
repository = "https://github.com/hra42/openrouter-rust"
homepage = "https://github.com/hra42/openrouter-rust"
description = "Idiomatic async Rust SDK for the OpenRouter API."
keywords = ["openrouter", "llm", "ai", "async", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
include = [
    "src/**/*",
    "docs/recipes/*.md",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "AGENTS.md",
    "CLAUDE.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
bytes = "1"
rand = "0.8"
url = "2"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
pretty_assertions = "1"
clap = { version = "4", features = ["derive"] }

[features]
default = []
# Enables the (beta) Responses API surface. See `crate::responses`.
beta = []

[[example]]
name = "responses"
required-features = ["beta"]

[[example]]
name = "e2e"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
unreachable_pub = "warn"
