[package]
name = "openrouter-client"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "Unlicense"
repository = "https://github.com/hra42/openrouter-rust"
homepage = "https://github.com/hra42/openrouter-rust"
description = "Idiomatic async Rust SDK for the OpenRouter API."
keywords = ["openrouter", "llm", "ai", "async", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
include = [
    "src/**/*",
    "docs/recipes/*.md",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "AGENTS.md",
    "CLAUDE.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Package is published as `openrouter-client` on crates.io because
# `openrouter`, `openrouter-rust`, and `openrouter-rs` were all taken.
# The library identifier stays `openrouter` so user code still writes
# `use openrouter::...`.
[lib]
name = "openrouter"

[dependencies]
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
bytes = "1"
rand = "0.8"
url = "2"
base64 = "0.22"
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-net = { version = "0.6", default-features = false, features = ["http"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-streams = { version = "0.5", optional = true }
web-sys = { version = "0.3", features = ["AbortController", "ReadableStream"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
pretty_assertions = "1"
clap = { version = "4", features = ["derive"] }

[features]
default = []
# Enables browser APIs required by the `wasm32-unknown-unknown` target.
browser = [
    "dep:getrandom",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-streams",
    "dep:web-sys",
]
# Enables the (beta) Responses API surface. See `crate::responses`.
beta = []

[[example]]
name = "responses"
required-features = ["beta"]

[[example]]
name = "e2e"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
unreachable_pub = "warn"
